<resources>
    <string name="app_name">Series Tracker</string>

    <string name="title_favorites">Favorites</string>
    <string name="title_search">Search</string>
    <string name="action_settings">Settings</string>

    <string name="search_here">Search for your favorite show</string>

    <string name="show_name">Name:</string>
    <string name="premiered_on">Premiered on:</string>
    <string name="status">Status:</string>
    <string name="runtime">Runtime:</string>
    <string name="channel">Channel:</string>
    <string name="rating">Rating:</string>
    <string name="summary">Summary:</string>
    <string name="description">Description</string>
    <string name="next_episode">Next Episodes</string>
    <string name="watched">Watched</string>
    <string name="unwatched">Unwatched</string>

</resources>
