<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="pt.dfsg.seriestracker.ui.detail.DetailActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_name"
        android:textSize="@dimen/detail_label_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/show_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/premiered_on"
        android:textSize="@dimen/detail_label_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/show_premiered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textSize="@dimen/detail_label_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/show_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/runtime"
        android:textSize="@dimen/detail_label_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/show_runtime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/channel"
        android:textSize="@dimen/detail_label_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/show_channel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rating"
        android:textSize="@dimen/detail_label_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/show_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/summary"
        android:textSize="@dimen/detail_label_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/show_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
